# PrivateInvestigator

./: .gitmodules  Dockerfile  LICENSE  README.md  setup.cfg
experiments/: analyze_contextual_similarity.py  analyze_pii_duplicate.py  analyze_pii_eliciting_direction.py  analyze_pii_length.py  analyze_pii_overlap.py  analyze_pii_perplexity.py  baseline_carlini.py  baseline_lukas.py  basic_test.py  fine_tune.py  get_model_perplexity.py  run_analysis_contextual_similarity_all.sh  run_analysis_contextual_similarity_small.sh  run_analysis_pii_eliciting_direction.sh  run_attack_campaign.py  run_baselines_email.sh  run_baselines_name.sh  run_baselines_phone.sh  run_baselines_small.sh  run_experiments_dedup.sh  run_experiments_dp.sh  run_extract_piis_all.sh  run_extract_piis_small.sh  run_generate_prompt.py  run_generate_prompt_interim.sh  run_generate_prompt_scratch.sh
experiments/piis/: .gitattributes  enron_deduplicated_email_train.yml  enron_deduplicated_email_train_dict.yml  enron_deduplicated_name_train.yml  enron_deduplicated_name_train_dict.yml  enron_deduplicated_phone_train.yml  enron_deduplicated_phone_train_dict.yml  enron_email_train.yml  enron_email_train_dict.yml  enron_name_train.yml  enron_name_train_dict.yml  enron_phone_train.yml  enron_phone_train_dict.yml  pile_email_train.yml  pile_email_train_dict.yml  pile_name_train.yml  pile_phone_train.yml  pile_phone_train_dict.yml  trec_deduplicated_email_train.yml  (+11 more)
scripts/: build.sh  get_commoncrawl.sh  get_enron.sh  get_model_weights.sh  get_model_weights_counter.sh  get_trec.sh  launch_container.sh
(+58 files in other folders)
