[metadata]
    name        = private_investigator
    version     = 0.1.0

[options]
package_dir=
    =src
packages=find:
install_requires = 
    torch
    transformers
    tqdm
    flair @ git+https://github.com/flairNLP/flair
    dp_transformers @ git+https://github.com/microsoft/dp-transformers.git@main#egg=dp_transformers
    opacus

[options.packages.find]
where=src